--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "angular-in-memory-web-api": "0.9.0",
     "jasmine-core": "3.5.0",
     "jasmine-marbles": "0.6.0",
-    "route": "^0.2.5",
+    "libphonenumber": "0.0.10",
+    "libphonenumber-js": "^1.7.48",
+    "route": "0.2.5",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
     "zone.js": "0.10.3"
