--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^9.0.0",
     "@angular/animations": "9.0.7",
     "@angular/common": "9.0.7",
     "@angular/compiler": "9.0.7",
@@ -12,6 +13,7 @@
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
     "angular-in-memory-web-api": "0.9.0",
+    "esri-loader": "^2.13.0",
     "jasmine-core": "3.5.0",
     "jasmine-marbles": "0.6.0",
     "libphonenumber": "0.0.10",
