--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^9.0.0",
-    "@angular/animations": "9.0.7",
-    "@angular/common": "9.0.7",
-    "@angular/compiler": "9.0.7",
-    "@angular/core": "9.0.7",
-    "@angular/forms": "9.0.7",
-    "@angular/platform-browser": "9.0.7",
-    "@angular/platform-browser-dynamic": "9.0.7",
-    "@angular/router": "9.0.7",
-    "angular-in-memory-web-api": "0.9.0",
+    "@angular/animations": "^9.1.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "angular-in-memory-web-api": "^0.10.0",
     "esri-loader": "^2.13.0",
-    "jasmine-core": "3.5.0",
-    "jasmine-marbles": "0.6.0",
-    "libphonenumber": "0.0.10",
-    "libphonenumber-js": "^1.7.48",
-    "route": "0.2.5",
-    "rxjs": "6.5.4",
-    "tslib": "1.11.1",
-    "zone.js": "0.10.3"
+    "jasmine-core": "^3.5.0",
+    "jasmine-marbles": "^0.6.0",
+    "libphonenumber": "^0.0.10",
+    "libphonenumber-js": "^1.7.49",
+    "route": "^0.2.5",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "scripts": {
     "ng": "ng",
