--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
     "angular-in-memory-web-api": "^0.10.0",
+    "bootstrap": "^4.4.1",
     "esri-loader": "^2.13.0",
     "jasmine-core": "^3.5.0",
     "jasmine-marbles": "^0.6.0",
+    "jquery": "1.9.1 - 3",
     "libphonenumber": "^0.0.10",
     "libphonenumber-js": "^1.7.49",
+    "popper.js": "^1.16.0",
     "route": "^0.2.5",
     "rxjs": "^6.5.4",
     "tslib": "^1.11.1",
